--- a/index.html
+++ b/index.html
@@ -734,7 +734,7 @@
     
     <!-- ======= Ulasan ======= -->
     <section id="ulasan" class="ulassan">
-        <script src="https://widget.trustmary.com/VWC10BJw7"></script>      
+        <!-- <script src="https://widget.trustmary.com/VWC10BJw7"></script>       -->
     </section>
     <!-- End Ulasan -->
 
@@ -798,7 +798,7 @@
                 <div class="col-lg-6 col-md-6 footer-contact">
                     <div class="d-flex gap-3">
                         <div>
-                            <img src="/img/mblg.png" class="img-fluid" width="100px" alt="" loading="lazy">
+                            <img src="/img/frlogo.png" class="img-fluid" width="100px" alt="" loading="lazy">
                         </div>
                         <div>
                             <h3 class="lh-base" style="font-size: 20px!important;"><small></small>FR RENTAL MOBIL <br /> BANJARMASIN</small></h3>
