--- a/index.html
+++ b/index.html
@@ -734,7 +734,8 @@
     
     <!-- ======= Ulasan ======= -->
     <section id="ulasan" class="ulassan">
-        <!-- <script src="https://widget.trustmary.com/VWC10BJw7"></script>       -->
+        <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+<div class="elfsight-app-e8977a30-40d6-43c8-b3e4-49a2ed160b40" data-elfsight-app-lazy></div>     
     </section>
     <!-- End Ulasan -->
 
