--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 <meta property="og:title" content="FR Rental Mobil Banjarmasin - Agen Sewa Mobil murah dan lengkap">
 <meta property="og:description" content="FR Rental Mobil menyediakan rental mobil murah dan terlengkap di Banjarmasin. Kami memiliki berbagai jenis mobil yang berkualitas dan lengkap">
 <meta property="og:type" content="website">
-<meta property="og:image" content="/img/mblg.png">
+<meta property="og:image" content="/img/frlogo.png">
 <meta property="og:site_name" content="FR Rental Mobil Banjarmasin - Agen Sewa Mobil murah dan lengkap" />
 <meta property="og:url" content="https://frrentalmobilbanjarmasin.com/">
 <meta name="twitter:title" content="FR Rental Mobil - Rental Mobil Murah dan Terlengkap di Banjarmasin">
 <meta name="twitter:description" content="FR Rental Mobil menyediakan rental mobil murah dan terlengkap di Banjarmasin. Kami memiliki berbagai jenis mobil, termasuk Avanza dan Innova">
-<meta name="twitter:image" content="/img/mblg.png">
+<meta name="twitter:image" content="/img/frlogo.png">
 <meta name="twitter:card" content="summary_large_image">
 
 <!-- Favicons -->
-<link href="/img/mblg.png" rel="shortcut icon" type="image/x-icon">
-<link href="/img/mblg.png" rel="apple-touch-icon">
+<link href="/img/frlogo.png" rel="shortcut icon" type="image/x-icon">
+<link href="/img/frlogo.png" rel="apple-touch-icon">
   
 <!-- get font rubik -->
 <link rel="preconnect" href="https://fonts.gstatic.com">
